Make the plugin compatible with Java 1.8 again